<resources>
    <string name="CFBundleLongVersionString">1.0.3921912</string>
    <string name="NEED_CELLULAR_PERMISSION">需要移动网络权限</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">LifeAfter</string>
    <string name="crop__cancel">取消</string>
    <string name="crop__done">完成</string>
    <string name="crop__pick_error">图像不可用</string>
    <string name="crop__saving">图像保存中</string>
    <string name="crop__wait">请稍候</string>
    <string name="export_ef_alert_cancel">取消</string>
    <string name="export_ef_alert_confirm">退出</string>
    <string name="export_ef_alert_message">你想要结束游戏并退出吗？</string>
    <string name="export_ef_alert_title">退出游戏</string>
    <string name="kilobytes_per_second">%1$s KB/s</string>
    <string name="neox_abort">Abort</string>
    <string name="neox_available">Available</string>
    <string name="neox_back">Back</string>
    <string name="neox_cancel">Cancel</string>
    <string name="neox_confirm">Confirm</string>
    <string name="neox_dumpview_cancel">Cancel</string>
    <string name="neox_dumpview_confirm">Confirm</string>
    <string name="neox_dumpview_label">非常抱歉，我们的程序刚刚发生了一个崩溃，发送错误报告？</string>
    <string name="neox_exit">Exit</string>
    <string name="neox_git_revision">2024_12_release_250522_191b614b1</string>
    <string name="neox_hello">Hello World, UnitestActivity!</string>
    <string name="neox_ignore">Ignore</string>
    <string name="neox_launcher_adjust_res">调整分辨率</string>
    <string name="neox_launcher_asset_size_to_copy">需要复制的Asset大小</string>
    <string name="neox_launcher_auto_res">自适应分辨率</string>
    <string name="neox_launcher_check_update">检查更新中....</string>
    <string name="neox_launcher_continue">继续更新</string>
    <string name="neox_launcher_copy_data">安装数据包</string>
    <string name="neox_launcher_copying">First launch,trying to extract resources...</string>
    <string name="neox_launcher_data_dir">数据包位置</string>
    <string name="neox_launcher_data_sd">data目录</string>
    <string name="neox_launcher_device_test">机能测试</string>
    <string name="neox_launcher_downloading">正在下载obb资源...</string>
    <string name="neox_launcher_external_sd">外置存储</string>
    <string name="neox_launcher_failure">更新失败</string>
    <string name="neox_launcher_failure_checkupdate">检查更新失败,请重新启动游戏</string>
    <string name="neox_launcher_failure_engine">游戏版本过旧,请下载最新版本</string>
    <string name="neox_launcher_internal_sd">内置存储</string>
    <string name="neox_launcher_multithread_gpures">多线程GLES</string>
    <string name="neox_launcher_multithread_render">多线程渲染</string>
    <string name="neox_launcher_network_error">下载时发生错误。请重启或重新安装游戏。</string>
    <string name="neox_launcher_no_enough_space">No enough space,please clear the memory card or check SD card is inserted</string>
    <string name="neox_launcher_not_wifi">你没有使用WIFI,是否继续更新</string>
    <string name="neox_launcher_start_game">启动游戏</string>
    <string name="neox_launcher_stop">停止更新</string>
    <string name="neox_launcher_updating">正在更新</string>
    <string name="neox_launcher_warn">警告</string>
    <string name="neox_no">No</string>
    <string name="neox_permission_confirm_content">要使用本应用程序，需要对终端的“存储”的访问权限。请到应用程序设置页面允许对“存储”的访问权限。</string>
    <string name="neox_permission_last_confirm">这些是游戏的基本权限，由于权限未获得授权，请单击“确定”，将退出游戏。</string>
    <string name="neox_permission_notification">"为了更好地游戏体验，请您允许开启以下权限：
[存储]为了读取游戏数据，游戏需要设备存储权限。
[麦克风]游戏的语音功能需要请求设备的麦克风权限。
[相机]客服功能可能需要拍照记录，需要请求设备的相机权限。"</string>
    <string name="neox_permission_set">设置</string>
    <string name="neox_permission_storage_confirm">为了读取游戏数据，游戏需要设备存储权限。</string>
    <string name="neox_permission_storage_reject">无法访问外部存储器</string>
    <string name="neox_permission_title">使用权限向导</string>
    <string name="neox_pick_from_camera">相机</string>
    <string name="neox_pick_from_library">相册</string>
    <string name="neox_pick_image">选择图像</string>
    <string name="neox_retry">Retry</string>
    <string name="neox_root">/sdcard/netease/g66na</string>
    <string name="neox_storage_permission_error_msg_1">为了读取游戏数据，游戏需要设备存储权限。</string>
    <string name="neox_storage_permission_error_msg_2">游戏无法访问设备存储，请前往应用设置开启设备存储权限。</string>
    <string name="neox_svn_revision">2039754</string>
    <string name="neox_unavailable">Unavailable</string>
    <string name="neox_use_python3">ON</string>
    <string name="neox_version_name">1.0.0</string>
    <string name="neox_welcomeview_rsync_all">Rsync同步所有文件</string>
    <string name="neox_welcomeview_rsync_script">Rsync仅同步脚本文件</string>
    <string name="neox_welcomeview_start_engine">启动游戏引擎</string>
    <string name="neox_welcomeview_total_update_file_num">需要更新的文件总数</string>
    <string name="neox_welcomeview_updated_file_num">已更新文件数量</string>
    <string name="neox_yes">Yes</string>
    <string name="notification_download_complete">Download complete</string>
    <string name="notification_download_failed">Download unsuccessful</string>
    <string name="obb_file_checking">正在检查obb资源...</string>
    <string name="obb_file_error_msg_1">游戏需要外部存储权限才能继续。</string>
    <string name="obb_file_error_msg_2">游戏需要外部存储权限才能继续。请在应用设置中打开此权限。</string>
    <string name="permission_error_msg">需要%s权限才能继续。请在应用设置中打开此权限。</string>
    <string name="state_completed">Download finished</string>
    <string name="state_connecting">Connecting to the download server</string>
    <string name="state_downloading">Downloading resources</string>
    <string name="state_failed">Download failed</string>
    <string name="state_failed_cancelled">Download cancelled</string>
    <string name="state_failed_fetching_url">Download failed because the resources could not be found</string>
    <string name="state_failed_sdcard_full">Download failed because the external storage is full</string>
    <string name="state_failed_unlicensed">Download failed because you may not have purchased this app</string>
    <string name="state_fetching_url">Looking for resources to download</string>
    <string name="state_idle">Waiting for download to start</string>
    <string name="state_paused_by_request">Download paused</string>
    <string name="state_paused_network_setup_failure">Download paused. Test a website in browser</string>
    <string name="state_paused_network_unavailable">Download paused because no network is available</string>
    <string name="state_paused_roaming">Download paused because you are roaming</string>
    <string name="state_paused_sdcard_unavailable">Download paused because the external storage is unavailable</string>
    <string name="state_paused_wifi_disabled">Download paused because wifi is disabled</string>
    <string name="state_paused_wifi_unavailable">Download paused because wifi is unavailable</string>
    <string name="state_unknown">Starting...</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="time_remaining">Time remaining: %1$s</string>
    <string name="time_remaining_notification">%1$s left</string>
    <string name="unisdk_alert_dialog_info">未成年人消费限制说明</string>
    <string name="unisdk_alert_dialog_positive">我知道了</string>
    <string name="unisdk_alert_dialog_tips">提示</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="netease_mpay_oversea__improve_user_experience_content">"Welcome to the User Experience Improvement Plan. We would like to contact you via email and hear about your opinions and suggestions, so that we may further improve your gaming experience.

If you do not want to participate, you can press the skip button to enter the game.

We guarantee that your email address will only be used to contact you in regards to the User Experience Improvement Plan. Should you have any queries concerning privacy, you can check the privacy policy. 

Happy gaming!"</string>
    <string name="netease_mpay_oversea__improve_user_experience_editor_title">Please enter your contact email address</string>
    <string name="netease_mpay_oversea__improve_user_experience_skip">Skip</string>
    <string name="netease_mpay_oversea__improve_user_experience_submit">Submit</string>
    <string name="netease_mpay_oversea__improve_user_experience_title">User Experience Improvement Plan</string>
    <string name="netease_mpay_oversea__quick_login_account">Account</string>
    <string name="netease_mpay_oversea__quick_login_role">Character</string>
    <string name="netease_mpay_oversea__quick_login_server">Server</string>
    <string name="netease_mpay_oversea__resend">Resend</string>
    <string name="netease_mpay_oversea__safe_mail_code_hint">Enter verification code.</string>
    <string name="netease_mpay_oversea__safe_mail_current">Current backup email: %1$s</string>
    <string name="netease_mpay_oversea__safe_mail_next">Next</string>
    <string name="uni_gm_f_close_cancel">Cancel</string>
    <string name="uni_gm_f_close_confirm1">Close the bubble?</string>
    <string name="uni_gm_f_close_confirm2">(Reappears after reboot / new message)</string>
    <string name="uni_gm_f_close_sure">Confirm</string>
    <string name="picedit_cancel">Cancel</string>
    <string name="picedit_take_photo">Photograph</string>
    <string name="picedit_take_video">Video</string>
    <string name="aweme_open_network_error_confirm">OK</string>
    <string name="aweme_open_network_error_tips">Network error. Please try again.</string>
    <string name="aweme_open_network_error_title">Authorization failed</string>
</resources>