<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="3.0">
        <TextView android:gravity="center" android:id="@id/labelDumpText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/neox_dumpview_label" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <Button android:id="@id/ButtonComfirm" android:layout_width="200.0dip" android:layout_height="wrap_content" android:text="@string/neox_dumpview_confirm" android:layout_weight="1.0" android:onClick="onConfirm" />
        <Button android:id="@id/ButtonCancel" android:layout_width="200.0dip" android:layout_height="wrap_content" android:text="@string/neox_dumpview_cancel" android:layout_weight="1.0" android:onClick="onCancel" />
    </LinearLayout>
</LinearLayout>
