<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/uni_gm_f_alert_dialog_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textColor="@color/uni_gm_text_color" android:id="@id/confirm1_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/uni_gm_f_close_confirm1" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <TextView android:textSize="18.0sp" android:textColor="@color/uni_gm_text_color" android:id="@id/confirm2_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/uni_gm_f_close_confirm2" android:layout_below="@id/confirm1_tv" android:layout_centerHorizontal="true" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/bottom_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <TextView android:textSize="20.0sp" android:textColor="@color/uni_gm_text_color" android:gravity="center" android:id="@id/cancel_tv" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/uni_gm_f_close_cancel" android:layout_weight="1.0" />
        <View android:background="#33ffffff" android:layout_width="1.0px" android:layout_height="100.0px" />
        <TextView android:textSize="20.0sp" android:textColor="@color/uni_gm_text_color" android:gravity="center" android:id="@id/sure_tv" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/uni_gm_f_close_sure" android:layout_weight="1.0" />
    </LinearLayout>
    <View android:background="#33ffffff" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginBottom="10.0dip" android:layout_above="@id/bottom_layout" />
</RelativeLayout>
