<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/netease_mpay_oversea__popup_bg" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="@dimen/netease_mpay_oversea__feedback_window_width" android:layout_height="@dimen/netease_mpay_oversea__feedback_window_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/netease_mpay_oversea__text_16" android:textStyle="bold" android:textColor="@color/netease_mpay_oversea__popup_title" android:gravity="center" android:id="@id/netease_mpay_oversea__feedback_title" android:layout_width="fill_parent" android:layout_height="@dimen/netease_mpay_oversea__feedback_title_height" android:text="@string/netease_mpay_oversea__improve_user_experience_title" />
    <ScrollView android:scrollbarStyle="outsideOverlay" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="@dimen/netease_mpay_oversea__margin_15" android:layout_marginTop="@dimen/netease_mpay_oversea__margin_10" android:layout_marginRight="@dimen/netease_mpay_oversea__margin_15" android:layout_marginBottom="@dimen/netease_mpay_oversea__margin_15" android:layout_weight="1.0">
        <TextView android:textSize="@dimen/netease_mpay_oversea__text_14" android:textColor="@color/netease_mpay_oversea__popup_text" android:gravity="start|center" android:id="@id/netease_mpay_oversea__feedback_content" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/netease_mpay_oversea__improve_user_experience_content" />
    </ScrollView>
    <TextView android:textSize="@dimen/netease_mpay_oversea__text_14" android:textColor="@color/netease_mpay_oversea__popup_text" android:gravity="start|center" android:id="@id/netease_mpay_oversea__editor_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/netease_mpay_oversea__margin_15" android:layout_marginRight="@dimen/netease_mpay_oversea__margin_15" android:text="@string/netease_mpay_oversea__improve_user_experience_editor_title" />
    <EditText android:gravity="start|center" android:id="@id/netease_mpay_oversea__input" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="@dimen/netease_mpay_oversea__feedback_editor_height" android:layout_marginLeft="@dimen/netease_mpay_oversea__margin_15" android:layout_marginTop="@dimen/netease_mpay_oversea__margin_5" android:layout_marginRight="@dimen/netease_mpay_oversea__margin_15" android:layout_marginBottom="@dimen/netease_mpay_oversea__margin_15" android:hint="example@gmail.com" android:inputType="textEmailAddress" style="@style/NeteaseMpay.EditStyle" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/netease_mpay_oversea__margin_15">
        <View android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <Button android:textColor="@color/netease_mpay_oversea__popup_btn_cancel" android:id="@id/netease_mpay_oversea__skip" android:background="@drawable/netease_mpay_oversea__popup_btn_cancel_background" android:layout_width="@dimen/netease_mpay_oversea__feedback_button_width" android:layout_height="@dimen/netease_mpay_oversea__feedback_button_height" android:layout_marginRight="@dimen/netease_mpay_oversea__margin_55" android:text="@string/netease_mpay_oversea__improve_user_experience_skip" style="@style/NeteaseMpay.FontStyle.Button" />
        <Button android:textColor="@color/netease_mpay_oversea__popup_btn_confirm_color" android:id="@id/netease_mpay_oversea__submit" android:background="@drawable/netease_mpay_oversea__popup_btn_confirm_background" android:layout_width="@dimen/netease_mpay_oversea__feedback_button_width" android:layout_height="@dimen/netease_mpay_oversea__feedback_button_height" android:text="@string/netease_mpay_oversea__improve_user_experience_submit" style="@style/NeteaseMpay.FontStyle.Button" />
        <View android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
