<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/netease_mpay_oversea__account_content" android:background="@drawable/netease_mpay_oversea__passport_quick_login_item" android:paddingLeft="@dimen/netease_mpay_oversea__padding_15" android:paddingRight="@dimen/netease_mpay_oversea__padding_15" android:layout_width="fill_parent" android:layout_height="@dimen/netease_mpay_oversea__text_view_height_62"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/netease_mpay__login_user_avatar" android:layout_width="@dimen/netease_mpay_oversea__icon_30" android:layout_height="@dimen/netease_mpay_oversea__icon_30" android:scaleType="fitXY" android:layout_centerVertical="true" />
    <LinearLayout android:layout_gravity="start|center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/netease_mpay_oversea__margin_15" android:layout_marginTop="@dimen/netease_mpay_oversea__margin_5" android:layout_marginRight="@dimen/netease_mpay_oversea__margin_15" android:layout_marginBottom="@dimen/netease_mpay_oversea__margin_5" android:layout_weight="1.0">
        <TextView android:textSize="@dimen/netease_mpay_oversea__text_14" android:textStyle="bold" android:textColor="@color/netease_mpay_oversea__login_userlist" android:ellipsize="end" android:gravity="start|center" android:id="@id/netease_mpay_oversea__account" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/netease_mpay_oversea__quick_login_account" android:maxLines="1" />
        <TextView android:textSize="@dimen/netease_mpay_oversea__text_11" android:textColor="@color/netease_mpay_oversea__login_userlist_server" android:ellipsize="end" android:gravity="start|center" android:id="@id/netease_mpay_oversea__server" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="@dimen/netease_mpay_oversea__margin_15" android:text="@string/netease_mpay_oversea__quick_login_server" android:maxLines="1" />
        <TextView android:textSize="@dimen/netease_mpay_oversea__text_11" android:textColor="@color/netease_mpay_oversea__login_userlist_server" android:ellipsize="end" android:gravity="start|center" android:id="@id/netease_mpay_oversea__role" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="@dimen/netease_mpay_oversea__margin_15" android:text="@string/netease_mpay_oversea__quick_login_role" android:maxLines="1" />
    </LinearLayout>
    <ImageView android:layout_gravity="start|center" android:id="@id/netease_mpay_oversea__delete" android:layout_width="@dimen/netease_mpay_oversea__icon_20" android:layout_height="@dimen/netease_mpay_oversea__icon_20" android:src="@drawable/netease_mpay_oversea__login_account_delete" android:scaleType="fitXY" />
</LinearLayout>
