<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/netease_mpay_oversea__title_bar" android:background="@drawable/netease_mpay_oversea__usercenter_nav_bg" android:layout_width="fill_parent" android:layout_height="@dimen/netease_mpay_oversea__title_bar_height">
        <TextView android:textSize="@dimen/netease_mpay_oversea__title_bar_font" android:textStyle="bold" android:textColor="@color/netease_mpay_oversea__usercenter_nav_title" android:gravity="center" android:layout_gravity="center" android:id="@id/netease_mpay_oversea__title_bar_title" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <ImageView android:layout_gravity="start|center" android:id="@id/netease_mpay_oversea__title_bar_back" android:layout_width="@dimen/netease_mpay_oversea__title_bar_icon_size" android:layout_height="@dimen/netease_mpay_oversea__title_bar_icon_size" android:layout_marginLeft="@dimen/netease_mpay_oversea__margin_10" android:layout_marginRight="@dimen/netease_mpay_oversea__margin_10" android:src="@drawable/netease_mpay_oversea__usercenter_nav_back" />
    </FrameLayout>
    <TextView android:textSize="@dimen/netease_mpay_oversea__text_15" android:textColor="@color/netease_mpay_oversea__popup_text" android:gravity="start|center" android:id="@id/netease_mpay_oversea__tips" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/netease_mpay_oversea__margin_10" />
    <TextView android:textSize="@dimen/netease_mpay_oversea__text_15" android:textColor="@color/netease_mpay_oversea__usercenter_security_email_highlight" android:gravity="start|center" android:id="@id/netease_mpay_oversea__safe_mail" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/netease_mpay_oversea__margin_10" android:layout_marginRight="@dimen/netease_mpay_oversea__margin_10" android:layout_marginBottom="@dimen/netease_mpay_oversea__margin_10" android:text="@string/netease_mpay_oversea__safe_mail_current" android:maxLines="2" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:background="@drawable/netease_mpay_oversea__usercenter_inputbox_background" android:padding="@dimen/netease_mpay_oversea__padding_2" android:layout_width="fill_parent" android:layout_height="@dimen/netease_mpay_oversea__edit_height_42" android:layout_marginLeft="@dimen/netease_mpay_oversea__margin_10" android:layout_marginRight="@dimen/netease_mpay_oversea__margin_10" android:layout_marginBottom="@dimen/netease_mpay_oversea__margin_10">
            <EditText android:textSize="@dimen/netease_mpay_oversea__text_15" android:textColor="@color/netease_mpay_oversea__popup_inputbox_text" android:textColorHint="@color/netease_mpay_oversea__popup_inputbox_text_tips" android:gravity="start|center" android:layout_gravity="start|center" android:id="@id/netease_mpay_oversea__code_input" android:background="@color/netease_mpay_oversea__transparent" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/netease_mpay_oversea__margin_10" android:layout_marginRight="@dimen/netease_mpay_oversea__margin_10" android:hint="@string/netease_mpay_oversea__safe_mail_code_hint" android:singleLine="true" android:layout_weight="1.0" android:isScrollContainer="true" android:imeOptions="actionDone|flagNoExtractUi" />
            <TextView android:gravity="center" android:layout_gravity="start|center" android:id="@id/netease_mpay_oversea__email_delete" android:background="@drawable/netease_mpay_oversea__popup_inputbox_delete" android:visibility="gone" android:layout_width="@dimen/netease_mpay_oversea__icon_20" android:layout_height="@dimen/netease_mpay_oversea__icon_20" android:layout_marginRight="@dimen/netease_mpay_oversea__margin_5" />
            <TextView android:gravity="start|center" android:background="@drawable/netease_mpay_oversea__usercenter_inputbox_line" android:layout_width="@dimen/netease_mpay_oversea__text_view_width_1" android:layout_height="fill_parent" android:layout_marginTop="@dimen/netease_mpay_oversea__margin_5" android:layout_marginBottom="@dimen/netease_mpay_oversea__margin_5" />
            <TextView android:textColor="@color/netease_mpay_oversea__usercenter_inputbox_send" android:ellipsize="end" android:gravity="center" android:id="@id/netease_mpay_oversea__code_retry" android:layout_width="@dimen/netease_mpay_oversea__text_view_width_70" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/netease_mpay_oversea__margin_5" android:layout_marginRight="@dimen/netease_mpay_oversea__margin_5" android:text="@string/netease_mpay_oversea__resend" android:maxLines="2" />
        </LinearLayout>
        <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <Button android:textSize="@dimen/netease_mpay_oversea__text_16" android:textColor="@color/netease_mpay_oversea__usercenter_start_btn" android:gravity="center" android:layout_gravity="center|bottom" android:id="@id/netease_mpay_oversea__positive_button" android:background="@drawable/netease_mpay_oversea__usercenter_start_btn" android:layout_width="@dimen/netease_mpay_oversea__button_width_260" android:layout_height="@dimen/netease_mpay_oversea__button_height_40" android:layout_marginBottom="@dimen/netease_mpay_oversea__margin_20" android:text="@string/netease_mpay_oversea__safe_mail_next" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
